--- a/week8/Week-6-Authentication-master/src/main/webapp/WEB-INF/web.xml
+++ b/week8/Week-6-Authentication-master/src/main/webapp/WEB-INF/web.xml
@@ -12,34 +12,42 @@
     <!-- SECURITY CONSTRAINT #1 -->
     <security-constraint>
         <web-resource-collection>
-            <web-resource-name>wholesale</web-resource-name>
+            <web-resource-name>admin</web-resource-name>
             <url-pattern>/authenticationEx5/admin/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>admin</role-name>
         </auth-constraint>
         <user-data-constraint>
-            <transport-guarantee>NONE</transport-guarantee>
+            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
         </user-data-constraint>
     </security-constraint>
 
     <!-- SECURITY CONSTRAINT #2 -->
     <security-constraint>
         <web-resource-collection>
-            <web-resource-name>retail</web-resource-name>
+            <web-resource-name>user</web-resource-name>
             <url-pattern>/authenticationEx5/user/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>user</role-name>
         </auth-constraint>
         <user-data-constraint>
-            <transport-guarantee>NONE</transport-guarantee>
+            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
         </user-data-constraint>
     </security-constraint>
     
     <login-config>
-        <auth-method>BASIC</auth-method>
+        <auth-method>FORM</auth-method>
         <realm-name>file</realm-name>
+        <form-login-config>
+            <form-login-page>
+                /login.xhtml
+            </form-login-page>
+            <form-error-page>
+                /error.xhtml
+            </form-error-page>
+        </form-login-config>
     </login-config>
     <!--Security Roles -->
     <security-role>
