--- a/week9/RemoteJava/pom.xml
+++ b/week9/RemoteJava/pom.xml
@@ -17,10 +17,9 @@
             <version>8.0.19</version>
         </dependency>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-            <version>8.0.1</version>
-            <type>jar</type>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>javax.persistence</artifactId>
+            <version>2.1.0</version>
         </dependency>
     </dependencies>
     <properties>
